# EthnoMusic-Lab-GY

./: .gitignore  COMPLETION_CONFIRMATION.txt  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FEATURES.md  FINAL_STATUS_REPORT.md  FIX_COMPLETION_STATUS.md  GETTING-STARTED.md  GUIDE.md  ML_TRAINER_README.md  MP3_FIX_SUMMARY.md  MP3_FIX_TESTING_GUIDE.md  MP3_TO_WAV_CONVERSION_GUIDE.md  Orange-Economy-1200w.md  Orange-Economy-Essay.md  PROJECT-SUMMARY.md  QUICK_FIX_REFERENCE.txt  README.md  README_MP3_FIX.md  REFINED-ORANGE-ECONOMY.md  index.html  package-lock.json  package.json  quiz-hotfix.js  script.js  styles.css  test-audio.html  test-recording.html  webpack.config.js
cognitive-ethnomusicology-lab/: .gitignore  README.md  dashboard_app.py  pyproject.toml  requirements.txt
cognitive-ethnomusicology-lab/.streamlit/: config.toml
cognitive-ethnomusicology-lab/data/templates/: analytic_memo_template.csv  interview_codebook_template.csv  (+3 more)
cognitive-ethnomusicology-lab/docs/: README.md  annotation_schema.yaml  consent_checklist.md  data_dictionary.md  fieldwork_protocol.md  omeka_3d_brain_install.md  user_questionnaire.md
cognitive-ethnomusicology-lab/scripts/: run_pipeline.py
cognitive-ethnomusicology-lab/tests/: test_annotation_schema.py  test_coding_templates.py  test_data_ingest.py  test_export_command.py  test_full_run_command.py  test_omeka_mapping.py  test_omeka_mapping_command.py  test_pipeline.py  test_report_export.py  test_rhythm_analysis.py  test_rhythm_clustering.py  test_transcript_analysis.py  test_transcript_batch.py  test_transcript_support.py
src/: games.js  (+21 more)
(+92 files in other folders)
